--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+div{
+  border: #282c34 1px solid;
+  padding: 20px;
+  margin: 30px;
+}
+button{
+  color: rgb(206, 221, 248);
+  background-color: darkblue;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 10px;
+}
+span{
+  color: green;
+}
+
